--- a/tmux.conf
+++ b/tmux.conf
@@ -23,12 +23,12 @@ bind-key '>' resize-pane -R 5
 bind-key '<' resize-pane -L 5
 
 # Move
-bind-key 'i' previous-window
-bind-key 'c' next-window
-bind-key 'a' select-pane -L
-bind-key 'e' select-pane -R
-bind-key 't' select-pane -U
-bind-key 's' select-pane -D
+bind-key 'a' previous-window
+bind-key 'e' next-window
+bind-key Left select-pane -L
+bind-key Right select-pane -R
+bind-key Up select-pane -U
+bind-key Down select-pane -D
 bind-key '=' resize-pane -Z
 
 # Copy mode
